--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,11 @@
-<img src="..assets/images/justlike.png" alt="">
+<div>
+  <img src="http://i.imgur.com/u10GLhf.png" alt="..." class="img-circle">
+</div>
 
 
+<h1>This is the homepage for justlike</h1> 
 
-<h1>This is the homepage</h1>  
+<div>
+  <form action="/signup"></form>
+</div> 
 
