session controller update

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,6 +9,8 @@
 </head>
 <body>
 		
+<img src="http://i.imgur.com/u10GLhf.png" alt="..." class="img-circle">
+
 <div>
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
