--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  */
 
 @import "bootstrap.css";
+@import url(http://fonts.googleapis.com/css?family=Sniglet:800);
+
+.html { 
+  background: url("http://i.imgur.com/e5eZiXl.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
