--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 		
-<img src="http://i.imgur.com/u10GLhf.png" alt="..." class="img-circle">
+
 
 <div>
   <nav class="navbar navbar-default" role="navigation">
@@ -22,31 +22,35 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <img src="http://i.imgur.com/u10GLhf.png" alt="..." class="img-dash">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Trending Recipes</a></li>
+        <li><a href="/search">Search Recipe Database</a></li>
+        <li><a href="/trending">Trending Recipes</a></li>
          <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add new</a></li>
-            <li><a href="#">Edit</a></li>
+            <li><a href="/recipes/new">Add new</a></li>
+            <li><a href="/recipes">Edit</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ingredients <b class="caret"></b></a>
+          <a href="/ingredients" class="dropdown-toggle" data-toggle="dropdown">Ingredients <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add new</a></li>
-            <li><a href="#">Edit</a></li>
+            <li><a href="/ingredients/new">Add new</a></li>
+            <li><a href="/ingredients/edit">Edit</a></li>
           </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-</div>    
+</div> 
+
+
 
 <%= yield %>
 
