--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,42 @@
-<div>
-  <img src="http://i.imgur.com/u10GLhf.png" alt="..." class="img-circle">
-</div>
+<!DOCTYPE html>
+<html lang-"en" class='html'>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>JustlikeApp</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+	<div id='container'>
+		<div class='home_2'>
+			<h3 id='hero_title'>Join Justlike</h3>
+			<form role="form" action='/users' method='post'>
+  				<div class="form-group">
+    				<label for="InputEmail">Email address</label>
+    				<input type="email" name='user[email]' class="form-control" id="InputEmail" placeholder="Enter email">
+  				</div>
+  				<div class="form-group">
+    				<label for="InputPassword">Password</label>
+    				<input type="password" name='user[password]' class="form-control" id="InputPassword" placeholder="Password">
+  				</div>
+  				<div class="form-group">
+    				<label for="password_confirmation">Password Confirmation</label>
+    				<input type="password" name='user[password_confirmation]' class="form-control" id="password_confirmation" placeholder="Password">
+  				</div>
+  				<div class="checkbox">
+    				<label>
+      					<input type="checkbox"> I have read the terms and conditions
+    				</label>
+  				</div>
+  				<button type="submit" class="btn btn-default">Signup</button>
+			</form>
+		</div>
+		<h2 class= 'home_slogan'><span style="color: white">your_recipes</span> <span style="color: RGB(65,148,207)">.</span> <span style="color: white">anywhere</span></h2>
+		<IMG STYLE="position:absolute; TOP:98px; RIGHT:804px; WIDTH:70px; HEIGHT:70px; BORDER-RADIUS:100%;" SRC="http://i.imgur.com/u10GLhf.png?1">
 
 
-<h1>This is the homepage for justlike</h1> 
 
-<div>
-  <form action="/signup"></form>
-</div> 
-
+	</div>
+</body>
+</html>
