--- a/app/views/pages/intro.html.erb
+++ b/app/views/pages/intro.html.erb
@@ -1,2 +1,9 @@
-<h1>This is the intro page for first time signup users prior to going to main dashboard</h1>
-<h2>Will have a intro video here</h2>
+<h1 class='intro_h1'>Welcome to justlike... </h1>
+
+<div class='intro_vid'>
+	<iframe width="560" height="315" src="//www.youtube.com/embed/_nPMe9HMdpo" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<form method="get" action="/dashboard">
+<button type="submit" class="btn btn-default" id="intro_button">Take me to my Recipe Dashboard</button>
+</form>
