--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 			<form role="form" action='/users' method='post'>
   				<div class="form-group">
     				<label for="InputEmail">Email address</label>
-    				<input type="email" name='user[email]' class="form-control" id="InputEmail" placeholder="Enter email">
+    				<input type="email" name='user[email]' class="form-control" id="InputEmail" placeholder="Enter a valid email">
   				</div>
   				<div class="form-group">
     				<label for="InputPassword">Password</label>
@@ -22,7 +22,7 @@
   				</div>
   				<div class="form-group">
     				<label for="password_confirmation">Password Confirmation</label>
-    				<input type="password" name='user[password_confirmation]' class="form-control" id="password_confirmation" placeholder="Password">
+    				<input type="password" name='user[password_confirmation]' class="form-control" id="password_confirmation" placeholder="Confirm Password">
   				</div>
   				<div class="checkbox">
     				<label>
@@ -33,7 +33,7 @@
 			</form>
 		</div>
 		<h2 class= 'home_slogan'><span style="color: white">your_recipes</span> <span style="color: RGB(65,148,207)">.</span> <span style="color: white">anywhere</span></h2>
-		<IMG STYLE="position:absolute; TOP:98px; RIGHT:804px; WIDTH:70px; HEIGHT:70px; BORDER-RADIUS:100%;" SRC="http://i.imgur.com/u10GLhf.png?1">
+		<img style="position:absolute; top:98px; right:804px; width:70px; height:70px; border-radius:100%;" src="http://i.imgur.com/u10GLhf.png?1">
 
 
 
