--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,5 +23,11 @@
   <%= f.label :image %>
   <%= f.url_field :image %>
 
+  <%= f.label :password%>
+  <%= f.password_field :password %>
+
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+
   <%= f.submit %>
 <% end %>
