--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,15 @@
+<div id='user_main'>
+	<p><%= image_tag @user.image, :class => 'user' %></p>
 
-<p><%= link_to 'Edit', edit_user_path(@user) %> <%= link_to 'Delete', @user, :method => :delete %></p>
-<p> <%= @user.name %></p>
-<p> <%= @user.address_1 %></p>
-<p> <%= @user.address_2 %></p>
-<p> <%= @user.city %></p>
-<p> <%= @user.postcode %></p>
-<p> <%= @user.country %></p>
-<p> <%= @user.email %></p>
-
-<p><%= image_tag @user.image, :class => 'user' %></p>
-
+	<p><strong>Name : </strong><%= @user.name %></p>
+	<p><strong>Address(line 1) : </strong><%= @user.address_1 %></p>
+	<p><strong>Address(line 1) : </strong><%= @user.address_2 %></p>
+	<p><strong>City : </strong><%= @user.city %></p>
+	<p><strong>Postcode : </strong><%= @user.postcode %></p>
+	<p><strong>Country : </strong><%= @user.country %></p>
+	<p><strong>Email : </strong><%= @user.email %></p>
+</div>	
  <div class="edit_delete_user">
-<%= link_to 'Edit User', edit_user_path(@user) %>
-|
-<%= link_to 'Delete User', @user, :method => :delete %>
+	<p><%= link_to 'Update my details', edit_user_path(@user) %> | <%= link_to 'Delete', @user, :method => :delete %></p>
 </div>
+
