--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -53,7 +53,7 @@ div.home_2 {
 	font-family: 'Sniglet', cursive;
 	position:absolute; TOP:171px; RIGHT:493px;
 	width: 800px;
-	margin-right: -500px;
+	margin-right: -514px;
 }	
 
 .img-dash {
@@ -92,6 +92,7 @@ h1#headerH1 {
 	color: rgb(65,148,207);
 	font-family: 'Sniglet', cursive;
 	text-shadow: 5px 5px 5px black;
+	margin-left: 20px ;
 }
 
 h2#H2search_title {
@@ -104,9 +105,12 @@ div#main {
 	margin:auto ;
 	padding: 10px ;
 	text-align: center;
-	max-widtn: 960px ;
-	background-color :grey ;
+	max-width: 960px ;
+	width: 70% ;
+	border-radius: 10px ;
+	background-color :#B5A3A3 ;
 }
+
 
 div#main img {
 	height:90px ;
@@ -115,7 +119,9 @@ div#main img {
 }
 
 #dashboard_button {
-margin-left: 10px ;
+margin-left: 218px ;
+margin-bottom: 5px ;
+padding-bottom: 5px ;
 }
 
 #search_image {
@@ -123,4 +129,13 @@ margin-left: 10px ;
 	width:20px ;
 }
 
+button#search_button.btn.btn-default {
+	padding: 5px ;
+	margin-top: 5px ;
+	margin-bottom: 7px;
+}
 
+footer#footer_search {
+	margin:auto ;
+	text-align:center ;
+}
