--- a/app/assets/stylesheets/recipes.css.scss
+++ b/app/assets/stylesheets/recipes.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div#recipes_index {
+	margin:auto ;
+	padding: 10px ;
+	text-align: center;
+	max-width: 960px ;
+	width: 70% ;
+	border-radius: 10px ;
+	background-color :#B5A3A3 ;
+	list-style-type: none ;
+}
+
+div#recipes_index li {
+	list-style-type: none ;
+}
+	
+
+li#recipe_image img {
+	height: 100px ;
+	width: 100px ;
+	margin: auto ;
+	border-radius: 10px ;
+}
+
