--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -31,19 +31,15 @@
         <li><a href="/search">Search Recipe Database</a></li>
         <li><a href="/trending">Trending Recipes</a></li>
          <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes and Ingredients <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="/recipes/new">Add new</a></li>
-            <li><a href="/recipes">Edit</a></li>
+            <li><a href="/recipes/new">Add new recipe</a></li>
+            <li><a href="/recipes">Edit recipe</a></li>
+            <li><a href="/ingredients/new">Add new Ingredient</a></li>
+            <li><a href="/ingredients/edit">Edit Ingredient</a></li>
           </ul>
         </li>
-        <li class="dropdown">
-          <a href="/ingredients" class="dropdown-toggle" data-toggle="dropdown">Ingredients <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="/ingredients/new">Add new</a></li>
-            <li><a href="/ingredients/edit">Edit</a></li>
-          </ul>
-        </li>
+        <li><a href="/users/">My details</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
