--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -96,7 +96,7 @@ h1#headerH1 {
 }
 
 h2#H2search_title {
-	color: whitesmoke ;
+	color: rgb(65,148,207);
 	font-family: 'Sniglet', cursive;
 	text-shadow: 5px 5px 5px black;
 }
