--- a/app/views/recipes/trending.html.erb
+++ b/app/views/recipes/trending.html.erb
@@ -1,33 +1,2 @@
-<h1 id='headerH1'>Trending Recipes</h1>
-
-<div id="trending">
-    <%= form_tag('/search', :method => 'get') %>
-	   <%= text_field_tag :search %> 
-
-    <form method="get" action="/search">
-      <button type="search" class="btn btn-default" id="search_button">Search Trending Recipes</button>  
-    </form>   
-    <form method="get" action="/dashboard">
-      <button type="submit" class="btn btn-default" id="dashboard_button">Go back to Dashboard </button>
-    </form>
-  </div>      
-
-  <div id='main'>
-    <% if @search_result %>
-    <% @search_result['matches'].each do |match| %>
-      <img src="<%= match['smallImageUrls'].first %>" />
-      <h2 id='H2search_title'><%= match['recipeName'] %></h2>
-        
-          <form method="get" action="/dashboard">
-            <button type="submit" class="btn btn-default" id="search_button">Add to My recipes</button>
-          </form>
-          <form method="get" action="/dashboard">
-            <button type="submit" class="btn btn-default" id="search_button">View full recipe</button>
-          </form>
-        <hr>
-    <% end %>
-
-</div> 
-<footer id="footer_search">Attributions:<%== @search_result['attribution']['html']%></footer>
-
-    <% end %>
+ <h1 id='headerH1'>Trending Recipes</h1>
+  <%= render "search" %>
