--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
       
       <ul class="nav navbar-nav navbar-right">
       <% if @current_user.present? %>
-        <li><%= link_to 'Logout ' + @current_user.name, login_path, :method => :delete %>
+        <li><%= link_to "Logout #{@current_user.try(:name)}", login_path, :method => :delete %>
+        <li><%= link_to "my dashboard", dashboard_path, :method => :get%>
         <% else %>
         <li><a href="/login">Login</a></li>
         <% end %>
