--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -33,19 +33,36 @@
          <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes and Ingredients <b class="caret"></b></a>
           <ul class="dropdown-menu">
+            <li><a href="/recipes">All recipes</a></li>
             <li><a href="/recipes/new">Add new recipe</a></li>
             <li><a href="/recipes">Edit recipe</a></li>
             <li><a href="/ingredients/new">Add new Ingredient</a></li>
             <li><a href="/ingredients/edit">Edit Ingredient</a></li>
           </ul>
         </li>
-        <li><a href="/users/">My details</a></li>
+        <li><%= link_to 'My details', user_path(@current_user) %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 </div> 
 
+<div>
+   <h2 id='H2search_title'>My Favourites</h2>
+   
+   <% (@current_user.recipes).each do |recipe| %>
+   
+   <div class="media">
+  <a class="pull-left" href="#">
+    <img class="media-object" src="<%= recipe.image %>" alt="Image">
+  </a>
+  <div class="media-body">
+    <h3><%=link_to recipe.name , recipe_path(recipe), :class => 'media-heading'%></h3><h5><%= button_to('Remove', delete_from_my_recipes_path(recipe.id), :method => 'post', :class => "btn btn-default") %></h5>
+  </div>
+</div>
+
+  <% end %>
+</div>
 
 
 <%= yield %>
