--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,33 +1,35 @@
-<%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<%= form_for @user, :method => 'patch' do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
 
-  <%= f.label :address_1 %>
-  <%= f.text_field :address_1 %>
+    <%= f.label :address_1 %>
+    <%= f.text_field :address_1, class: 'form-control' %>
 
-  <%= f.label :address_2 %>
-  <%= f.text_field :address_2 %>
+    <%= f.label :address_2 %>
+    <%= f.text_field :address_2, class: 'form-control' %>
 
-  <%= f.label :city %>
-  <%= f.text_field :city %>
+    <%= f.label :city %>
+    <%= f.text_field :city, class: 'form-control' %>
 
-  <%= f.label :postcode %>
-  <%= f.text_field :postcode %>
+    <%= f.label :postcode %>
+    <%= f.text_field :postcode, class: 'form-control' %>
 
-  <%= f.label :country %>
-  <%= f.text_field :country %>
+    <%= f.label :country %>
+    <%= f.text_field :country, class: 'form-control' %>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+    <%= f.label :email %>
+    <%= f.text_field :email, class: 'form-control' %>
 
-  <%= f.label :image %>
-  <%= f.url_field :image %>
+    <%= f.label :image %>
+    <%= f.url_field :image, class: 'form-control' %>
 
-  <%= f.label :password%>
-  <%= f.password_field :password %>
+    <%= f.label :password %>
+    <%= f.password_field :password, class: 'form-control' %>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <%= f.submit %>
+     <%= f.submit %>
+  </div>
 <% end %>
