--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,10 +1,12 @@
-<p><%= @ingredient.measurement %> <%= @ingredient.name %></p>
-<p><%= link_to 'Edit', edit_ingredient_path(@ingredient) %> <%= link_to 'Delete', @ingredient, :method => :delete %></p>
-<p><%= @ingredient.cost %></p>
-<p><%= image_tag @ingredient.image, :class => 'ingredient' %></p>
-
- <div class="edit_delete_ingredient">
-<%= link_to 'Edit Ingredient', edit_ingredient_path(@ingredient) %>
-|
-<%= link_to 'Delete Ingredient', @ingredient, :method => :delete %>
+<div class="media">
+	<h2><%= @ingredient.name %></h2>
+	<p class id ='link'><%= link_to('Edit', edit_ingredient_path(@ingredient)) %> | <%= link_to('Delete', @ingredient, :method => :delete) %> | <%= link_to('Back to All Ingredients', ingredients_path) %>  </p>
+  <a class="pull-left" href="#">
+    <img class="media-object" src="<%= @ingredient.image %>" alt="...">
+  </a>
+  <div class="media-body">
+  	<h5 class="media-heading"><strong>Cost: <%= @ingredient.cost %></h5>
+    <h5 class="media-heading"><strong>Measurement: </strong><%= @ingredient.measurement %></h5>
+    <h5 class="media-heading"><strong>Ingredients: </strong></h5>
+  </div>
 </div>
