--- a/app/assets/stylesheets/ingredients.css.scss
+++ b/app/assets/stylesheets/ingredients.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Ingredients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*  Ingredients Form */
+
+div.form-group {
+	max-width: 960px ;
+	margin:auto ;
+}
