--- a/app/assets/stylesheets/recipes.css.scss
+++ b/app/assets/stylesheets/recipes.css.scss
@@ -22,6 +22,32 @@ li#recipe_image img {
 	height: 100px ;
 	width: 100px ;
 	margin: auto ;
+	margin-bottom: 10px ;
 	border-radius: 10px ;
 }
 
+.media {
+	max-width: 960px ;
+	margin: auto ;
+	border-radius: 30px;
+}
+
+.media body {
+	max-width: 960px ;
+	margin: auto ;
+	border-radius: 30px;
+	margin-bottom: 18px ;
+}
+
+.media-object {
+	height: 80px ;
+	width: 120px ;
+}
+
+p#link {
+	margin-left: 20px ;
+}
+
+div.media h2 {
+	margin-left: 20px ;
+}
