--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -28,6 +28,28 @@ div.edit_delete_user {
 	text-align:center ;
 }
 
-form#edit_user * {
-	display: table-caption;
+.edit_user {
+	max-width: 960px ;
+	margin:auto ;
+	margin-bottom: 5px ;
 }
+
+form.edit_user {
+	max-width: 960px ;
+	margin:auto ;
+}
+
+div.form-group input {
+	padding: 2px ;
+	margin: 0.5em ;
+}
+
+input.btn.btn-info {
+
+	margin: auto;
+	text-align: center;
+	max-width: 960px;
+	margin-left: 239px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}	
