--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,1 +1,17 @@
-<h2 class='blog'>blog</h2>
+<!DOCTYPE html>
+<html lang-"en" class='html'>
+	<head>
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<title>JustlikeApp</title>
+  			<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  			<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  			<%= csrf_meta_tags %>
+	</head>
+	<body>
+		<div>
+			<h2 class= 'home_slogan'><span style="color: white">BLOG</span> <span style="color: RGB(65,148,207)">.</span> <span style="color: white">coming soon</span></h2>
+			<img style="position:absolute; top:98px; right:804px; width:370px; height:370px; border-radius:100%; box-shadow: 10px 10px 20px #575252" src="http://i.imgur.com/u10GLhf.png?1">
+		</div>
+	</body>
+</html>
+
