--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -37,7 +37,7 @@
             <li><a href="/recipes/new">Add new recipe</a></li>
             <li><a href="/recipes">Edit recipe</a></li>
             <li><a href="/ingredients/new">Add new Ingredient</a></li>
-            <li><a href="/ingredients/edit">Edit Ingredient</a></li>
+            <li><a href="/ingredients">Edit Ingredient</a></li>
           </ul>
         </li>
         <li><%= link_to 'My details', user_path(@current_user) %></li>
@@ -57,7 +57,8 @@
     <img class="media-object" src="<%= recipe.image %>" alt="Image">
   </a>
   <div class="media-body">
-    <h3><%=link_to recipe.name , recipe_path(recipe), :class => 'media-heading'%></h3><h5><%= button_to('Remove', delete_from_my_recipes_path(recipe.id), :method => 'post', :class => "btn btn-default") %></h5>
+    <h3><%=link_to recipe.name , recipe_path(recipe), :class => 'media-heading'%></h3>
+    <h5><%= button_to('Remove', delete_from_my_recipes_path(recipe.id), :method => 'post', :class => "btn btn-default") %></h5>
   </div>
 </div>
 
