--- a/app/views/recipes/_search.html.erb
+++ b/app/views/recipes/_search.html.erb
@@ -1,8 +1,7 @@
 
   <div id="search">
     <%= form_tag('/search', :method => 'get') %>
-	  <%= text_field_tag :search %> 
-
+	  <%= text_field_tag :search %>  
     <form method="get" action="/search">
       <button type="search" class="btn btn-default" id="search_button">Search Recipe Database </button>  
     </form>   
@@ -15,13 +14,10 @@
     <% if @recipes %>
     <% @recipes.each do |recipe| %>
       <img src=<%= recipe.image %> />
-      <h2 id='H2search_title'><%= recipe.name %></h2>
-          
-          <%= button_to('add to my recipes', add_to_my_recipes_path(recipe.id), :method => 'post', :class => "btn btn-default") %>
+      <h2 id='H2search_title'><%= link_to(recipe.name, recipe) %></h2>     
+        <%= button_to('add to my recipes', add_to_my_recipes_path(recipe.id), :method => 'post', :class => "btn btn-default") %>
 
         <hr>
     <% end %>
- 
-</div> 
-
+  </div> 
     <% end %>
