--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag '/login' do %>
   <div class="form-group">
     <%= label_tag 'name' %>
-    <%= text_field_tag 'name', nil, :autofocus => true, :placeholder => 'craigsy', :class => 'form-control' %>
+    <%= text_field_tag 'name', nil, :autofocus => true, :placeholder => 'name', :class => 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag 'password' %>
