--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
       <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
       <%= csrf_meta_tags %>
       <link href="assets/stylesheets/application.css" rel="stylesheet">
+      <link href="assets/stylesheets/bootstrap-responsive.css" rel="stylesheet">
   </head>
     <body>
 		  <nav class="navbar navbar-default" role="navigation">
