--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,8 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+      <link href="assets/stylesheets/application.css" rel="stylesheet">
+      <link href="assets/stylesheets/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 	<div id='container'>
